@@ -1,4 +1,4 @@
-build.ver=1.2.8
+build.ver=1.2.9
 build.name=bb-ant-tools
 
 build.jar.file=${build.name}.jar
